# coalgebraic-parsing

./: .gitignore  .travis.yml  README.md  coalgebraic-parsing.cabal
src-bench/: micro.hs
src-lib/Text/: CoalgebraicParsing.hs
src-lib/Text/CoalgebraicParsing/: Char.hs  Cobind.hs
src-test/: tests.hs
