name: coalgebraic-parsing
version: 0.1.0.0
license: AllRightsReserved
category: Text
build-type: Simple
cabal-version: >=1.10

synopsis:
  Coalgebraic parsing.

author:
  Tillmann Rendel

maintainer:
  rendel@informatik.uni-tuebingen.de

copyright:
  2015 by Tillmann Rendel

library
  hs-source-dirs: src-lib
  default-language: Haskell2010
  exposed-modules:
    Text.CoalgebraicParsing
  build-depends:
    base >=4.6 && <4.8

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src-test
  main-is: tests.hs
  -- other-modules:
  Build-depends:
    base >=4.6 && <4.8,
    coalgebraic-parsing,
    test-framework,
    test-framework-hunit,
    HUnit
